# JoFileLib

./: .gitignore  CMakeLists.txt  FileSRAW.vcxproj  FileSRAW.vcxproj.filters  JoFileLib.sln  Makefile  config.mk
Test/: Test.vcxproj  Test.vcxproj.filters  example.json  image.cpp  main.cpp  rle.tga  streamreader.cpp  utils.cpp
include/: file.hpp  fileutils.hpp  filewrapper.hpp  hddfile.hpp  imagewrapper.hpp  jofilelib.hpp  memfile.hpp
src/: fileutils.cpp  fileutils_unix.cpp  fileutils_win.cpp  filewrapper.cpp  hddfile.cpp  imagewrapper.cpp  imagewrapper_pfm.cpp  imagewrapper_png.cpp  imagewrapper_tga.cpp  memfile.cpp  streamreader.cpp
